--- a/models/7.cfg
+++ b/models/7.cfg
@@ -7,7 +7,8 @@
     "output_shape": [
         8
     ],
-    "predict_size": 16,
-    "x_std": 0.00046559557085856795,
-    "y_std": 3.89784574508667
+    "future": 16,
+    "x_std": 0.000472289306344,
+    "y_std": 0.33071891388307384,
+    "time_unit": 300
 }
