--- a/dockerfile.intel-cpu
+++ b/dockerfile.intel-cpu
@@ -1,6 +1,7 @@
 # При использовании оптимизированного Intel образа производительность деградирует более чем в 2 раза
 # FROM docker.io/intelaipg/intel-optimized-tensorflow:2.0.0-mkl-py3
-FROM docker.io/intelaipg/intel-optimized-tensorflow:latest
+# FROM docker.io/intelaipg/intel-optimized-tensorflow:latest-mkl-py3
+FROM docker.io/intelaipg/intel-optimized-tensorflow:2.0.0-mkl-py3
 
 RUN pip3 install --upgrade pip
 RUN pip3 install --upgrade setuptools
