--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
     "initialdate": "2015-01-01T00:00:00",
     "modelname": "./models/19",
-    "symbol": "EURUSD_i",
+    "symbol": "EURUSD",
     "timeframe": "TIMEFRAME_M5",
     "delay": 120
 }
