--- a/dockerfile.tf-cpu
+++ b/dockerfile.tf-cpu
@@ -1,8 +1,9 @@
 FROM tensorflow/tensorflow:latest-py3
 
+RUN apt-get -y update && apt-get install -y graphviz
 RUN pip3 install --upgrade pip
 RUN pip3 install --upgrade setuptools
-RUN pip3 install --upgrade pandas pydot 
+RUN pip3 install --upgrade pandas pydot pydotplus
 RUN pip3 install --upgrade graphviz tqdm matplotlib
 
 
