--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
-    "initialdate": "2015-01-01T00:00:00",
-    "modelname": "./models/19",
+    "initialdate": "2010-01-01T00:00:00",
+    "modelname": "./TFLite/20.tflite",
     "symbol": "EURUSD_i",
     "timeframe": 300,
-    "delay": 300
+    "delay": 300,
+    "use_tflite": "True"
 }
