--- a/docker/dockerfile.tf-cpu
+++ b/docker/dockerfile.tf-cpu
@@ -1,10 +1,10 @@
 FROM tensorflow/tensorflow:latest-py3
 
 RUN apt-get -y update && apt-get install -y graphviz
-RUN pip3 install --upgrade pip
-RUN pip3 install --upgrade setuptools
+RUN pip3 install --upgrade pip setuptools
 RUN pip3 install --upgrade pandas pydot pydotplus
 RUN pip3 install --upgrade graphviz tqdm matplotlib
+
 
 
 EXPOSE 1979/tcp
