datainfo.timeunit, log в файл и конс, account_info

--- a/TFLite/20.tflite.cfg
+++ b/TFLite/20.tflite.cfg
@@ -9,5 +9,6 @@
         8
     ],
     "x_std": 0.0003561503253877163,
-    "y_std": 0.0013715662062168121
+    "y_std": 0.0013715662062168121,
+    "timeunit": 300
 }
