--- a/models/19.cfg
+++ b/models/19.cfg
@@ -9,5 +9,6 @@
         8
     ],
     "x_std": 0.00035791785921901464,
-    "y_std": 0.001378647517412901
+    "y_std": 0.001378647517412901,
+    "timeunit": 300
 }
