--- a/config.json
+++ b/config.json
@@ -1,9 +1,8 @@
 {
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
     "initialdate": "2015-01-01T00:00:00",
-    "modelname": "models/19",
+    "modelname": "models/20.tflite",
     "symbol": "EURUSD",
     "timeframe": 300,
     "delay": 300,
-    "use_tflite": false
 }
