--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
-    "initialdate": "2015-01-01T00:00:00",
-    "modelname": "models/20.tflite",
+    "initialdate": "2018-01-01T00:00:00",
+    "modelname": "models/19",
     "symbol": "EURUSD",
     "timeframe": 300,
     "delay": 300
