--- a/models/23.cfg
+++ b/models/23.cfg
@@ -8,6 +8,7 @@
     "output_shape": [
         8
     ],
+    "timeunit": 300,
     "x_std": 0.0003592926077544689,
     "y_std": 0.001384264207445085
 }
