--- a/models/35.h5.cfg
+++ b/models/35.h5.cfg
@@ -1,13 +1,13 @@
 {
     "future": 16,
     "input_shape": [
-        64,
+        256,
         1
     ],
     "output_shape": [
         8
     ],
     "timeunit": 300,
-    "x_std": 0.00046759098768234253,
-    "y_std": 0.0018107728101313114
+    "x_std": 0.0004,
+    "y_std": 0.0014
 }
