--- a/docker/dockerfile.gpu
+++ b/docker/dockerfile.gpu
@@ -1,4 +1,5 @@
-FROM tensorflow/tensorflow:latest-gpu-py3
+#FROM tensorflow/tensorflow:latest-gpu
+FROM tensorflow/tensorflow:nightly-gpu
 
 RUN apt-get -y update && apt-get install -y graphviz
 RUN pip3 install --upgrade pip setuptools
