38-я val(-0.5123, 0.1769), load_dataset2

--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
     "initialdate": "2010-01-01T00:00:00",
     "modelname": "models/35.h5",
-    "symbol": "EURUSD_i",
+    "symbol": "EURUSD",
     "delay": 60
 }
