--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
-    "initialdate": "2016-01-01T00:00:00",
-    "modelname": "models/36.h5",
-    "symbol": "EURUSD_i",
+    "initialdate": "2010-01-01T00:00:00",
+    "modelname": "models/37.h5",
+    "symbol": "EURUSD",
     "delay": 60
 }
