--- a/models/38.cfg
+++ b/models/38.cfg
@@ -10,6 +10,6 @@
         8
     ],
     "timeunit": 300,
-    "x_std": 0.0004,
-    "y_std": 0.0014
+    "x_std": 0.00046050891978666186,
+    "y_std": 0.001760470331646502
 }
