--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
     "initialdate": "2016-01-01T00:00:00",
     "modelname": "models/39.h5",
-    "symbol": "EURUSD_i",
+    "symbol": "EURUSD",
     "delay": 300
 }
