--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
+    "mt5path": "D:/Dev/Alpari MT5/terminal64.exe",
     "initialdate": "2016-01-01T00:00:00",
     "modelname": "models/39.h5",
     "symbol": "EURUSD",
