--- a/docker/dockerfile.intel-cpu-latest
+++ b/docker/dockerfile.intel-cpu-latest
@@ -1,8 +1,9 @@
 # При использовании оптимизированного Intel образа производительность деградирует более чем в 2 раза
 # FROM docker.io/intelaipg/intel-optimized-tensorflow:2.0.0-mkl-py3
 # FROM docker.io/intelaipg/intel-optimized-tensorflow:latest-mkl-py3
-FROM  docker.io/intelaipg/intel-optimized-tensorflow:latest
 
+FROM  docker.io/intelaipg/intel-optimized-tensorflow:latest
+ENV IAS_DISABLE_PROXY 1
 RUN apt-get -y update && apt-get install -y graphviz
 RUN pip3 install --upgrade pip setuptools
 RUN pip3 install --upgrade pandas pydot pydotplus
