--- a/docker/dockerfile.intel-cpu-latest
+++ b/docker/dockerfile.intel-cpu-latest
@@ -2,12 +2,12 @@
 # FROM docker.io/intelaipg/intel-optimized-tensorflow:2.0.0-mkl-py3
 # FROM docker.io/intelaipg/intel-optimized-tensorflow:latest-mkl-py3
 
-FROM  docker.io/intelaipg/intel-optimized-tensorflow:latest
-ENV IAS_DISABLE_PROXY 1
+FROM  docker.io/intel/intel-optimized-tensorflow:2.2.0-ubuntu-18.04
+
 RUN apt-get -y update && apt-get install -y graphviz
-RUN pip3 install --upgrade pip setuptools
-RUN pip3 install --upgrade pandas pydot pydotplus
-RUN pip3 install --upgrade graphviz tqdm matplotlib
+RUN pip3 install pip setuptools
+RUN pip3 install pandas pydot pydotplus
+RUN pip3 install graphviz tqdm matplotlib
 
 
 # Переменные окружения для настройки параллелизма intel cpu
