--- a/docker/dockerfile.tf-cpu
+++ b/docker/dockerfile.tf-cpu
@@ -1,7 +1,7 @@
 FROM tensorflow/tensorflow:latest-py3
 
-RUN apt-get -y update && apt-get install -y graphviz
-RUN pip3 install --upgrade pip setuptools
+RUN apt-get -y update && apt-get install -y graphviz 
+RUN pip3 install --upgrade pip setuptools PyWavelets
 RUN pip3 install --upgrade pandas pydot pydotplus
 RUN pip3 install --upgrade graphviz tqdm matplotlib
 
