50-я dense val(cs=-0.87)

--- a/docker/dockerfile.intel-cpu
+++ b/docker/dockerfile.intel-cpu
@@ -1,10 +1,14 @@
 # При использовании оптимизированного Intel образа производительность деградирует более чем в 2 раза
 # FROM docker.io/intelaipg/intel-optimized-tensorflow:2.0.0-mkl-py3
 # FROM docker.io/intelaipg/intel-optimized-tensorflow:latest-mkl-py3
-FROM docker.io/intel/intel-optimized-tensorflow:2.0.0-mkl-py3
 
-RUN apt-get -y update && apt-get install -y graphviz
-RUN pip3 install --upgrade pip setuptools
+FROM docker.io/intel/intel-optimized-tensorflow:latest
+
+ENV http_proxy ""
+ENV https_proxy ""
+
+RUN apt-get -y update && apt-get install -y graphviz 
+RUN pip3 install --upgrade pip setuptools PyWavelets
 RUN pip3 install --upgrade pandas pydot pydotplus
 RUN pip3 install --upgrade graphviz tqdm matplotlib
 
