52-я lstm val(mae=0.0125, mse=-.057)

--- a/docker/dockerfile.gpu
+++ b/docker/dockerfile.gpu
@@ -3,7 +3,7 @@ FROM tensorflow/tensorflow:latest-gpu
 
 RUN apt-get -y update && apt-get install -y graphviz 
 RUN pip3 install --upgrade pip setuptools PyWavelets
-RUN pip3 install --upgrade pandas pydot pydotplus
+RUN pip3 install --upgrade pandas pydot pydotplus  scikit-learn
 RUN pip3 install --upgrade graphviz tqdm matplotlib
 
 
