--- a/docker/dockerfile.intel-cpu
+++ b/docker/dockerfile.intel-cpu
@@ -9,7 +9,7 @@ ENV https_proxy ""
 
 RUN apt-get -y update && apt-get install -y graphviz 
 RUN pip3 install --upgrade pip setuptools PyWavelets
-RUN pip3 install --upgrade pandas pydot pydotplus
+RUN pip3 install --upgrade pandas pydot pydotplus scikit-learn
 RUN pip3 install --upgrade graphviz tqdm matplotlib
 
 
