--- a/docker/dockerfile.intel-cpu-latest
+++ b/docker/dockerfile.intel-cpu-latest
@@ -6,7 +6,7 @@ FROM  docker.io/intel/intel-optimized-tensorflow:2.2.0-ubuntu-18.04
 
 RUN apt-get -y update && apt-get install -y graphviz 
 RUN pip3 install --upgrade pip setuptools PyWavelets
-RUN pip3 install --upgrade pandas pydot pydotplus
+RUN pip3 install --upgrade pandas pydot pydotplus scikit-learn
 RUN pip3 install --upgrade graphviz tqdm matplotlib
 
 
