--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
     "mt5path": "D:/Dev/Alpari MT5/terminal64.exe",
-    "initialdate": "2018-01-01T00:00:00",
-    "modelname": "models/trendencoder.h5",
+    "initialdate": "2004-01-01T00:00:00",
+    "modelname": "models/trendencoder",
     "symbol": "EURUSD",
     "timeunit": 3600,
-    "delay": 300,
+    "delay": 60,
     "input_width": 64,
     "label_width": 1,
     "sample_width": 1,
