--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
     "mt5path": "D:/Dev/Alpari MT5/terminal64.exe",
     "initialdate": "2004-01-01T00:00:00",
-    "modelname": "models/trendencoder",
+    "modelname": "models/trendencoder2",
     "symbol": "EURUSD",
     "timeunit": 3600,
     "delay": 60,
