--- a/docker/dockerfile.intel-cpu-latest
+++ b/docker/dockerfile.intel-cpu-latest
@@ -2,7 +2,8 @@
 # FROM docker.io/intelaipg/intel-optimized-tensorflow:2.0.0-mkl-py3
 # FROM docker.io/intelaipg/intel-optimized-tensorflow:latest-mkl-py3
 
-FROM  docker.io/intel/intel-optimized-tensorflow:2.2.0-ubuntu-18.04
+FROM  docker.io/intel/intel-optimized-tensorflow
+
 
 RUN apt-get -y update && apt-get install -y graphviz 
 RUN pip3 install --upgrade pip setuptools PyWavelets
