--- a/docker/dockerfile.tf-cpu
+++ b/docker/dockerfile.tf-cpu
@@ -1,4 +1,5 @@
-FROM tensorflow/tensorflow:latest
+# FROM tensorflow/tensorflow:latest
+FROM gcr.io/deeplearning-platform-release/tf2-cpu.2-3
 
 RUN apt-get -y update && apt-get install -y graphviz 
 RUN pip3 install --upgrade pip setuptools PyWavelets
