--- a/config.json
+++ b/config.json
@@ -2,11 +2,11 @@
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
     "mt5path": "D:/Dev/Alpari MT5/terminal64.exe",
     "initialdate": "2004-01-01T00:00:00",
-    "modelname": "models/trendencoder2",
+    "modelname": "models/dense2",
     "symbol": "EURUSD",
     "timeunit": 3600,
-    "delay": 60,
-    "input_width": 16,
+    "delay": 300,
+    "input_width": 32,
     "label_width": 1,
     "sample_width": 1,
     "shift": 1
