--- a/config.json
+++ b/config.json
@@ -2,12 +2,12 @@
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
     "mt5path": "D:/Dev/Alpari MT5/terminal64.exe",
     "initialdate": "2004-01-01T00:00:00",
-    "modelname": "models/dense2",
+    "modelname": "models/spectral2-4",
     "symbol": "EURUSD",
     "timeunit": 3600,
     "delay": 300,
-    "input_width": 32,
-    "label_width": 1,
+    "input_width": 1024,
+    "label_width": 4,
     "sample_width": 1,
-    "shift": 1
+    "shift": 4
 }
