--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ __pycache__/*
 *.csv
 *.7z
 # папка с данными
-data/*
+datas/*
 # локальные настройки vs code
 .vscode/*
 # временные
@@ -15,6 +15,8 @@ tmp*
 logs/*
 results/.fuse_*
 # модели
+models/*
+ckpt/*
 *.h5
 *.tf 
 *.ckpt.*
