текущий прогноз по ценам закрытия

--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
     "mt5path": "D:/Dev/Alpari MT5/terminal64.exe",
-    "initialdate": "2010-01-01T00:00:00",
-    "modelname": "models/spectral3-2",
+    "initialdate": "2015-01-01T00:00:00",
+    "modelname": "models/specemble1-1",
     "symbol": "EURUSD",
     "timeunit": 3600,
     "delay": 300,
-    "input_width": 1024,
-    "label_width": 2,
+    "input_width": 256,
+    "label_width": 1,
     "sample_width": 1,
-    "shift": 2
+    "shift": 1
 }
