добавлено дообучение модели

--- a/config.json
+++ b/config.json
@@ -5,7 +5,9 @@
     "modelname": "models/specemble1-1",
     "symbol": "EURUSD",
     "timeunit": 3600,
-    "delay": 300,
+    "compute_delay": 300,
+    "train_delay": 3600,
+    "train_rates_count": 32768,
     "input_width": 256,
     "label_width": 1,
     "sample_width": 1,
