--- a/config.json
+++ b/config.json
@@ -2,14 +2,14 @@
     "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
     "mt5path": "D:/Dev/Alpari MT5/terminal64.exe",
     "initialdate": "2015-01-01T00:00:00",
-    "modelname": "models/specemble1-1",
+    "modelname": "models/ens64-256-2.h5",
     "symbol": "EURUSD",
     "timeunit": 3600,
     "compute_delay": 300,
     "train_delay": 3600,
     "train_rates_count": 32768,
     "input_width": 256,
-    "label_width": 1,
+    "label_width": 2,
     "sample_width": 1,
-    "shift": 1
+    "shift": 2
 }
