--- a/docker/dockerfile.intel-cpu-latest
+++ b/docker/dockerfile.intel-cpu-latest
@@ -10,6 +10,7 @@ RUN pip3 install --upgrade pip setuptools PyWavelets
 RUN pip3 install --upgrade pandas pydot pydotplus scikit-learn
 RUN pip3 install --upgrade graphviz tqdm matplotlib
 
+ENV TF_CPP_MIN_LOG_LEVEL "3"
 
 # Переменные окружения для настройки параллелизма intel cpu
 ENV KMP_ABORT_DELAY 0
