--- a/docker/dockerfile.tf-cpu
+++ b/docker/dockerfile.tf-cpu
@@ -6,6 +6,7 @@ RUN pip3 install --upgrade pip setuptools PyWavelets
 RUN pip3 install --upgrade pandas pydot pydotplus scikit-learn
 RUN pip3 install --upgrade graphviz tqdm matplotlib 
 
+ENV TF_CPP_MIN_LOG_LEVEL "3"
 
 
 EXPOSE 1979/tcp
