--- a/docker/dockerfile.tf-cpu
+++ b/docker/dockerfile.tf-cpu
@@ -1,5 +1,5 @@
-# FROM tensorflow/tensorflow:latest
-FROM gcr.io/deeplearning-platform-release/tf2-cpu.2-3
+FROM tensorflow/tensorflow:latest
+# FROM gcr.io/deeplearning-platform-release/tf2-cpu.2-3
 
 RUN apt-get -y update && apt-get install -y graphviz 
 RUN pip3 install --upgrade pip setuptools PyWavelets
@@ -7,7 +7,7 @@ RUN pip3 install --upgrade pandas pydot pydotplus scikit-learn
 RUN pip3 install --upgrade graphviz tqdm matplotlib 
 
 ENV TF_CPP_MIN_LOG_LEVEL "3"
-
+ENV TF_ENABLE_ONEDNN_OPTS 1
 
 EXPOSE 1979/tcp
 
