--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-    "dbname": "D:/Dev/Alpari MT5/MQL5/Files/predictions.sqlite",
-    "mt5path": "D:/Dev/Alpari MT5/terminal64.exe",
-    "initialdate": "2015-01-01T00:00:00",
-    "modelname": "models/d-boost32-256-1",
+    "dbname": "D:/Dev/DB/predictions.sqlite",
+    "mt5path": "D:/Dev/Metatrader 5 (VTB Forex)/terminal64.exe",
+    "initialdate": "2012-01-01T00:00:00",
+    "modelname": "models/eurusd-64-256-1",
     "symbol": "EURUSD",
     "timeunit": 3600,
-    "compute_delay": 1800,
-    "train_delay": 7200,
+    "compute_delay": 3600,
+    "train_delay": 3600,
     "train_rates_count": 32768,
     "input_width": 256,
     "label_width": 1,
