--- a/config.json
+++ b/config.json
@@ -2,10 +2,10 @@
     "dbname": "D:/Dev/DB/predictions.sqlite",
     "mt5path": "D:/Dev/Metatrader 5 (VTB Forex)/terminal64.exe",
     "initialdate": "2012-01-01T00:00:00",
-    "modelname": "models/d-boost32-256-1",
+    "modelname": "models/eurusd-h1-32",
     "symbol": "EURUSD",
     "timeunit": 3600,
-    "compute_delay": 1800,
+    "compute_delay": 3600,
     "train_delay": 3600,
     "train_rates_count": 32768,
     "input_width": 256,
