--- a/docker/dockerfile.openvino
+++ b/docker/dockerfile.openvino
@@ -2,19 +2,15 @@
 # FROM docker.io/intelaipg/intel-optimized-tensorflow:2.0.0-mkl-py3
 # FROM docker.io/intelaipg/intel-optimized-tensorflow:latest-mkl-py3
 
-FROM docker.io/intel/intel-optimized-tensorflow
+FROM  docker.io/openvino/ubuntu20_dev:latest
 
-
-ENV http_proxy ""
-ENV https_proxy ""
-
+USER root
 RUN apt-get -y update && apt-get install -y graphviz 
 RUN pip3 install --upgrade pip setuptools PyWavelets
 RUN pip3 install --upgrade pandas pydot pydotplus scikit-learn
 RUN pip3 install --upgrade graphviz tqdm matplotlib
 
 ENV TF_CPP_MIN_LOG_LEVEL "3"
-ENV TF_ENABLE_ONEDNN_OPTS 1
 
 # Переменные окружения для настройки параллелизма intel cpu
 ENV KMP_ABORT_DELAY 0
@@ -22,7 +18,7 @@ ENV KMP_ADAPTIVE_LOCK_PROPS 1,1024
 ENV KMP_ALIGN_ALLOC 64
 ENV KMP_ALL_THREADPRIVATE  192
 ENV KMP_ATOMIC_MODE  2
-ENV KMP_BLOCKTIME  1
+ENV KMP_BLOCKTIME  30
 ENV KMP_DETERMINISTIC_REDUCTION  false
 ENV KMP_DEVICE_THREAD_LIMIT  2147483647
 ENV KMP_DISP_HAND_THREAD  false
@@ -76,18 +72,21 @@ ENV OMP_MAX_ACTIVE_LEVELS  2147483647
 ENV OMP_MAX_TASK_PRIORITY  0
 ENV OMP_NESTED  false
 ENV OMP_NUM_THREADS  12
+ENV OMP_PLACES 'cores'
 ENV OMP_PROC_BIND  'intel'
 ENV OMP_SCHEDULE  'static'
 ENV OMP_STACKSIZE  "8M"
 ENV OMP_TARGET_OFFLOAD  "DEFAULT"
 ENV OMP_THREAD_LIMIT  2147483647
 ENV OMP_TOOL  "enabled"
-ENV KMP_AFFINITY "verbose,warnings,respect,granularity=fine,compact,1,0"
+ENV OMP_WAIT_POLICY 'PASSIVE'
+ENV KMP_AFFINITY  "verbose,warnings,respect,granularity=core,compact,1,0"
 
+
+EXPOSE 1979/tcp
 RUN ["mkdir", "/home/predictor"]
 ADD ./ /home/predictor/
 WORKDIR /home/predictor/
 EXPOSE 1979/tcp
 USER 1000
-
-ENTRYPOINT ["python3", "./predictor.py", "--cpu"]
+ENTRYPOINT /bin/bash -c "python3 ./predictor.py --cpu"
