--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
     "dbname": "D:/Dev/DB/predictions.sqlite",
-    "mt5path": "D:/Dev/Metatrader 5 (VTB Forex)/terminal64.exe",
+    "mt5path": "d:/Dev/Alpari MT5/terminal64.exe",
     "initialdate": "2012-01-01T00:00:00",
-    "modelname": "models/eurusd-h1-32",
+    "modelname": "models/red-eurusd-h1-32",
     "symbol": "EURUSD",
     "timeunit": 3600,
-    "compute_delay": 3600,
+    "compute_delay": 600,
     "train_delay": 3600,
     "train_rates_count": 32768,
-    "input_width": 256,
+    "input_width": 64,
     "label_width": 1,
     "sample_width": 1,
     "shift": 1
