--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-    "dbname": "D:/Dev/DB/predictions.sqlite",
-    "mt5path": "d:/Dev/Alpari MT5/terminal64.exe",
+    "dbname": "C:\\Users\\Ivan\\AppData\\Roaming\\MetaQuotes\\Terminal\\D0E8209F77C8CF37AD8BF550E51FF075\\MQL5\\Files\\predictions.sqlite",
+    "mt5path": "C:\\Program Files\\MetaTrader 5\\terminal64.exe",
     "initialdate": "2012-01-01T00:00:00",
-    "modelname": "models/red-eurusd-h1-32",
+    "modelname": "models/t-64-16-256-32",
     "symbol": "EURUSD",
     "timeunit": 3600,
     "compute_delay": 600,
     "train_delay": 3600,
-    "train_rates_count": 32768,
-    "input_width": 64,
+    "train_rates_count": 65536,
+    "input_width": 16,
     "label_width": 1,
     "sample_width": 1,
     "shift": 1
